--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -10,13 +10,14 @@
 
     <LinearLayout
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_poster"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:scaleType="centerCrop"
             android:background="@color/cardview_dark_background"/>
 
         <TextView
@@ -24,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:textStyle="bold"
             android:ellipsize="end"
-            android:maxLines="3"
+            android:maxLines="2"
             tools:text="Aquaman and the Lost Kingdom"/>
 
     </LinearLayout>
